[IMP] Improve css to prevent content jumping Improved the page styles to prevent content jumping when scroll bar appears by adding a html selecto to set the width to 95vw.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -546,3 +546,7 @@ body.dark-theme {
     margin: 4.5rem 0 2.5rem;
   }
 }
+
+html {
+  width: 95vw;
+}
